[package]
name = "rs-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nalgebra = "0.32.3"
inquire = { git = "https://github.com/mikaelmello/inquire", rev = "3efb148c5cb6523d9cfb1cd07a0d8c093b9ed165" }
owo-colors = "3.5.0"
ecow = "0.1.2"

# optimize for size
[profile.release]
strip = true
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
